# realtime-stt-system

./: .env.example  .gitignore  AGENTS.md  CHANGELOG_FILE_API.md  CLAUDE.md  CONFIGURATION.md  DOCKER_README.md  Dockerfile  FILE_TRANSCRIPTION_GUIDE.md  Makefile  Makefile.backup  README.md  README_EDITABLE.md  README_GUI.md  STT_EDITOR_SPEC.md  docker-compose.yml  install.sh  prompt-исследование.md  pyproject.toml  requirements.txt  rich_stt_demo.py  run.sh  simple_stt_demo.py  start_editor.py  stt-research.md  transcribe-file.sh  transcription_editor.py  websocket_minimal_editor.py  websocket_rich_client.py  отчет_исследование_мультиязычного_распознавания_речи.md
.github/workflows/: docker-build.yml
mic_stream_py/: __init__.py  cli.py
mic_stream_py/client/: __init__.py  audio_buffer.py  file_transcribe_client.py  minimal_editor.py  parakeet_client.py  voice_daemon.py
mic_stream_py/server/: Dockerfile  env_config.py  file_transcriber.py  http_api.py  requirements-server.txt  stt_server.py  test_config.py  test_defaults.py  test_gpu_logging.py  test_http_api.py
server/: .dockerignore  Dockerfile  env_config.py  install_packages.py  requirements-server.txt  stt_server.py  test_defaults.py  test_gpu_logging.py  test_logging.py
исследование_речь_в_текст/: README.md
